Do not set cursor when context menu is showing

Because updateCursor: can be called with delay, do not set cursor
when context menu is showing. It's a matter of timing and any other
Native Views or Native Windows such as Dialogs could be ignored
because they will be shown with enough delay.

Bug: 784776
Change-Id: Ia7d0bd05757d93f8c3883509059b73a03a0b3ef7
Reviewed-on: https://chromium-review.googlesource.com/783973
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518554}
Former-commit-id: 679120f758e488cd002bbeff737e3a8828f16737